--- a/index.html
+++ b/index.html
@@ -10,35 +10,7 @@
   </head>
 
   <body>
-    <div id="container"></div>
   </body>
 
-  <script type="text/javascript">
-// source: Natural Earth http://www.naturalearthdata.com/ via geojson.xyz
-const COUNTRIES =
-  'https://d2ad6b4ur7yvpq.cloudfront.net/naturalearth-3.3.0/ne_50m_admin_0_scale_rank.geojson'; //eslint-disable-line
-  
-const deckgl = new deck.DeckGL({
-  container: 'container',
-  latitude: 51.47,
-  longitude: 0.45,
-  zoom: 4,
-  bearing: 0,
-  pitch: 30,
-  layers: [
-    new deck.GeoJsonLayer({
-      id: 'base-map',
-      data: COUNTRIES,
-      // Styles
-      stroked: true,
-      filled: true,
-      lineWidthMinPixels: 2,
-      opacity: 0.4,
-      getLineDashArray: [3, 3],
-      getLineColor: [60, 60, 60],
-      getFillColor: [200, 200, 200]
-    }),
-  ]
-});
-  </script>
+  <script type="text/javascript" src="app.js"></script>
 </html>
